# backup

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
cmake/toolchains/: arm-linux-gnu-noneabi.cmake  hexagon6.toolchain.cmake
configs/: har-detector-evaluation.yml  har-model-evaluation.yml
data/: README.md  download_dataset.sh
data/model/: har_cnn-0615.pb  har_cnn-20210204.h5  har_cnn-20210204.yml  har_cnn.pb  har_cnn.yml  har_cnn_0615.yml  har_cnn_new.yml  har_cnn_onnx.yml  weights.best-0615.hdf5  weights.best.hdf5
data/model/quantization/tflite_models/: weights.best-0615.tflite  weights.best-0615_quant_int8.tflite  weights.best.tflite  weights.best_quant_int8.tflite
data/tools/: check_results.py  clean_data.py  extract_zip_files.py  inter.py  label_tool.py  utils.py
research/data/: activity_data_y_feat.npy
research/python/: activity_data_labeler.py  activity_data_research.py  activity_research.py
research/python/models/: model-alpha.mdl
research/python/utils/: confusion_matrix_pretty_print.py  data_labeler.py  log.py
scripts/: build-hexagon.sh  build_android_armeabi-v7a.sh  build_hexagon.sh  build_x86_32.sh  build_x86_64.sh  evaluate.py  install_prerequisites.sh  validate.py
src/c/: activity_recognizer.c  activity_recognizer.h  activity_recognizer_py.cc  indoor_outdoor_recognizer.c  indoor_outdoor_recognizer.h  indoor_outdoor_recognizer_demo_with_array.c  indoor_outdoor_recognizer_demo_with_raw_sentences.c  miot_algo_har_version.c.in  miot_algo_har_version.h
src/c/gpgsv/: gpgsv_utils.c  gpgsv_utils.h
src/c/har_detector/: CMakeLists.txt  har_detector.c  har_detector.h  har_detector_func.h  har_detector_python.cc
src/c/har_model/: CMakeLists.txt  har_model.c  har_model.h  har_model_python.cc  micro_engine_c_interface.h
src/data/: activity_data_y_feat.npy
src/py/: -home-mi-桌面-indoor-EllipticalMachine_indoor_outdoor_recognizer_summary.csv  -home-mi-桌面-indoor-RopeJump_indoor_outdoor_recognizer_summary.csv  -home-mi-桌面-indoor_indoor_outdoor_recognizer_summary.csv  activity_data_labeler.py  activity_data_preprocess.py  activity_data_research.py  activity_recognizer.py  activity_recognizer_c.py  activity_research.py  convert_ailab_data.py  har_det.py  har_det_c.py  har_model.py  har_model_c.py  indoor_outdoor_recognizer.py  indoor_outdoor_recognizer_demo.py  split_test.py  temp.py  train.py
src/py/models/: model-alpha.cnn.mdl  model-alpha.cnn.onnx  model-alpha.cnn.pth  model-alpha.dt.mdl  model-alpha.lr.mdl  model-alpha.nb.mdl  model-cnn-20200122.onnx  model-cnn-20200122.pth  model-cnn-20200125.onnx  model-cnn-20200125.pth  model-cnn-20200201.onnx  model-cnn-20200201.pth
src/py/tools/: common.py  keras_to_tf_pb.py  keras_to_tflite.py  models.py  quantize.py  tcresnet_blocks.py  train.py
src/py/utils/: accuracy_analysis_results.csv  auto-tune-train.py  common.py  confusion_matrix_pretty_print.py  convert_to_onnx.py  data_labeler.py  fds_cli_ex.py  keras_models.py  keras_to_tf_pb.py  log.py  model_utils.py  plotting.py  predict_result_analysis.py  split_test.py  torch_models.py  trainer.py
test/cunit/: CMakeLists.txt  activity_recognizer_test.cc  har_detector_test.cc  har_model_test.cc  indoor_outdoor_recognizer_test.cc
test/cunit/gpgsv/: gpgsv_utils_test.cc
test/cunit/har_detector/: CMakeLists.txt  har_detector_test.cc  har_detector_test.py
test/cunit/har_model/: CMakeLists.txt  har_model_test.cc
test/eval/: eval_har_model.py
test/py/: activity_recognizer_test.py  har_model_test.py  test_utils.py
