include_directories(${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

include_directories(./)
add_library(har_model_c har_model.c)

if(HOST)
  find_library(LIB_HAR_CNN har_cnn HINTS ${CMAKE_CURRENT_SOURCE_DIR}/../../../lib/x86_64/)
  find_library(LIB_MICRO micro HINTS ${CMAKE_CURRENT_SOURCE_DIR}/../../../lib/x86_64/)
  target_link_libraries(har_model_c ${LIB_HAR_CNN} ${LIB_MICRO})
  find_package(PythonLibs 3.5 REQUIRED)
  set_target_properties(har_model_c PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
  include_directories(${PYTHON_INCLUDE_DIRS})
  find_package(pybind11)
  pybind11_add_module(har_model har_model_python.cc)
  set_target_properties(har_model PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
  target_link_libraries(har_model PRIVATE har_model_c ${LIB_HAR_CNN} ${LIB_MICRO} m)
endif()
